--- a/base.html
+++ b/base.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Kurbydoo.github.com</title>
+</head>
+<body>
 
+ <br>
+ <a hreft = 'https://www.kurbydoo.github.com'>Home Page</a>
+
+</body>
+</html>
