--- a/base.html
+++ b/base.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 
+ {% block content %}
  <br>
  <a hreft = 'https://www.kurbydoo.github.com'>Home Page</a>
 
+ {% endblock content %}
+ 
 </body>
 </html>
