--- a/base.html
+++ b/base.html
@@ -6,7 +6,7 @@
 <body>
 
  <br>
- <a href = 'https://www.kurbydoo.github.com/krubbydoo'>Home Page</a>
+ <a href = 'https://kurbydoo.github.io/krubbydoo'>Home Page</a>
  
 </body>
 </html>
