--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 
 <p> test text </p>
 
+<iframe width="410" height="460"
+   src="https://academy.cs.cmu.edu/sharing/thistleHorse2833/embed"> 
+ </iframe>
+
 <a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> TEST LINK </a>
