--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
    src="https://academy.cs.cmu.edu/sharing/thistleHorse2833/embed"> 
  </iframe>
 <br>
+<a href = 'https://kurbydoo.github.io/krubbydoo/bot.html'> Play Against the Random Chess Bot! </a>
 <a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> TEST LINK </a>
