--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
  </iframe>
 <br>
 <a href = 'https://kurbydoo.github.io/krubbydoo/bot.html'> Play Against the Random Chess Bot! </a>
-<a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> TEST LINK </a>
+<br>
+<a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> To the blank page! </a>
