--- a/bot.html
+++ b/bot.html
@@ -1,5 +1,10 @@
 <h1> Play against the random bot!
-  
+ <br>
  <iframe width="410" height="460"
    src="https://academy.cs.cmu.edu/sharing/navyChicken9144/embed"> 
  </iframe>
+  
+<br>
+<a href = 'https://kurbydoo.github.io/krubbydoo/index.html'> Play Normal Chess! </a>
+<br>
+<a href = 'https://kurbydoo.github.io/krubbydoo'>Home Page</a>
