--- a/bot.html
+++ b/bot.html
@@ -1,7 +1,7 @@
-<h1> Play against the random bot!
+<h1> Watch the random bots fight!!
  <br>
- <iframe width="410" height="460"
-   src="https://academy.cs.cmu.edu/sharing/navyChicken9144/embed"> 
+<iframe width="410" height="460"
+   src="https://academy.cs.cmu.edu/sharing/midnightBlueLion5083/embed"> 
  </iframe>
   
 <br>
