--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  </iframe>
 <br>
 <p>
-   <a href = 'https://kurbydoo.github.io/krubbydoo/bot.html'> Play Against the Random Chess Bot! </a>
+   <a href = 'https://kurbydoo.github.io/krubbydoo/fightbot.html'> Play Against the Random Chess Bot! </a>
+   <br>
+   <a href = 'https://kurbydoo.github.io/krubbydoo/bot.html'> Watch the bots fight! </a>
    <br>
    <a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> To the blank page! </a>
 </p>
