--- a/bot.html
+++ b/bot.html
@@ -3,8 +3,12 @@
 <iframe width="410" height="460"
    src="https://academy.cs.cmu.edu/sharing/midnightBlueLion5083/embed"> 
  </iframe>
-  
-<br>
-<a href = 'https://kurbydoo.github.io/krubbydoo/index.html'> Play Normal Chess! </a>
-<br>
-<a href = 'https://kurbydoo.github.io/krubbydoo'>Home Page</a>
+ 
+ <p>
+  <br>
+  <a href = 'https://kurbydoo.github.io/krubbydoo/index.html'> Play Normal Chess! </a>
+  <br>
+  <a href = 'https://kurbydoo.github.io/krubbydoo/fightbot.html'> Fight the random bot! </a>
+  <br>
+  <a href = 'https://kurbydoo.github.io/krubbydoo'>Home Page</a>
+ </p>
