--- a/bot.html
+++ b/bot.html
@@ -1,4 +1,4 @@
-<h1> Watch the random bots fight!!
+<h1> Watch the random bots fight!!</h1>
  <br>
 <iframe width="410" height="460"
    src="https://academy.cs.cmu.edu/sharing/midnightBlueLion5083/embed"> 
