--- a/fightbot.html
+++ b/fightbot.html
@@ -1,5 +1,5 @@
 
-<h1> Watch the random bots fight!</h1>
+<h1> Fight the random bot!</h1>
  <br>
 <iframe width="410" height="460"
    src="https://academy.cs.cmu.edu/sharing/navyChicken9144/embed"> 
