--- a/index.html
+++ b/index.html
@@ -13,3 +13,6 @@
    <br>
    <a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> To the blank page! </a>
 </p>
+<div class="tenor-gif-embed" data-postid="25786869" data-share-method="host" data-width="100%" data-aspect-ratio="1.7785714285714287">
+   <a href="https://tenor.com/view/gif-25786869">GIF</a> 
+</div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
