--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
    <a href = 'https://kurbydoo.github.io/krubbydoo/base.html'> To the blank page! </a>
 </p>
 <div class="tenor-gif-embed" data-postid="25786869" data-share-method="host" data-width="100%" data-aspect-ratio="1.7785714285714287">
-   <a href="https://tenor.com/view/gif-25786869">GIF</a> 
+   <a href="https://media.tenor.com/images/e12b6c6a7f2c587e5cb68356161576f5/tenor.gif">GIF</a> 
 </div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
